# ESPHome-MCP

./: .dockerignore  .env.example  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  healthcheck.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/esphome_mcp/: __main__.py  client.py  server.py
tests/: conftest.py  test_tools.py
