[project]
name = "esphome-mcp"
dynamic = ["version"]
description = "MCP server for the ESPHome 2026.6+ Device Builder dashboard"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "loryans", email = "loryan@strant.com" }]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://gitea.strant.casa/loryans/ESPHome-MCP"
"Upstream (kdkavanagh)" = "https://github.com/kdkavanagh/esphome-mcp"

[project.scripts]
esphome-mcp = "esphome_mcp.__main__:main"
esphome-mcp-web = "esphome_mcp.__main__:main_web"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.20",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "esphome",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that require a real ESPHome dashboard (set ESPHOME_DASHBOARD_URL)",
]

[tool.ty.environment]
python-version = "3.13"
